--- a/style.css
+++ b/style.css
@@ -10,25 +10,53 @@
     background-color: white;
 }
 .navbar, .page, h2,h4{
-    font-family:"Gill Sans" , sans-serif;
-    font-weight: 400;
+    font: status-bar;
+    font-family: revert;
+    font-size: larger;
     
 } 
 .page{
     background-color: #f44336;
-    padding: 70px;
     color: white;
-    padding-bottom: 5%;
-}
-h1{
-    font-size:70px;
-    margin: 16px;
-    font-weight: normal;
-    font-family: 'Gill Sans', sans-serif;
+    padding-top: 5%;
+    font: menu;
+    font-size: 70px;
+    font-family: revert;
+    padding-bottom: 64px;
+    
 }
 h4{
     font-family: 'Lato', sans-serif;
     font-size: 24px;
     margin-top: 2%;
+    font-weight: 400;
 }
+h5{
+    font-size: 18px ;
+    font-family: "Lato", sans-serif;
+    margin-top: 23px;
+    font: inherit;
+    font-size: larger;
+}
+p{
+    color: #757575;
+    
+}   
+h1 {
+    font: unset;
+    font-weight: inherit;
+   padding-top: 20px;
+}
+.py-1 {
+    padding-top: 64px!important;
+    padding-bottom: 64px!important ;
+    background-color:#f1f1f1;
+}
+.Section3.container-fluid.py-5.text-center.text-white {
+    background-color: dimgrey;
+}
+footer.container.text-center {
+    padding-top: 64px! important;
+    padding-bottom: 64px!important;
 
+}
